--- a/src/main/resources/templates/consulta.html
+++ b/src/main/resources/templates/consulta.html
@@ -17,7 +17,9 @@
                     Consulta
                 </h1>
 
-                <h2 class="text-gray-600 font-bold uppercase mt-4 mb-1">
+                <h2
+                    class="text-gray-600 font-bold text-center uppercase mt-4 mb-1"
+                >
                     Informações do Agendamento
                 </h2>
 
@@ -89,16 +91,16 @@
                     type="textarea"
                 ></textarea>
 
-                <div class="flex gap-4 self-end mt-4">
-                    <a
-                        class="self-center border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded shadow-sm hover:shadow"
-                        href="/"
-                    >
-                        Cancelar
-                    </a>
-                    <button class="primary-btn self-center" type="submit">
-                        Cadastrar
-                    </button>
+                <div
+                    class="flex flex-row self-stretch justify-evenly sm:self-end gap-2 mt-2"
+                >
+                    <a class="secondary-btn" href="/">Cancelar</a>
+
+                    <input
+                        type="submit"
+                        class="primary-btn"
+                        value="Confirmar Agendamento"
+                    />
                 </div>
             </form>
         </div>
