--- a/src/main/resources/templates/recusarAgendamentoModal.html
+++ b/src/main/resources/templates/recusarAgendamentoModal.html
@@ -1,9 +1,9 @@
 <div
     class="flex flex-col bg-white shadow-lg px-6 pt-8 pb-8 rounded w-full max-w-lg gap-8"
 >
-    <label class="label"
-        >Tem certeza que deseja recusar este agendamento?</label
-    >
+    <label class="label">
+        Tem certeza que deseja recusar este agendamento?
+    </label>
 
     <div class="flex gap-4 self-end">
         <button
