--- a/src/main/resources/templates/tabelaUsuarios.html
+++ b/src/main/resources/templates/tabelaUsuarios.html
@@ -2,7 +2,7 @@
     xmlns:th="http://www.w3.org/1999/xhtml"
     th:fragment="tabela"
     id="tabelaUsuarios"
-    class="min-w-full divide-y divide-slate-500"
+    class="w-full divide-y divide-slate-500"
 >
     <thead>
         <tr class="text-slate-500">
