--- a/src/main/resources/templates/agendamentoDentista.html
+++ b/src/main/resources/templates/agendamentoDentista.html
@@ -8,20 +8,24 @@
         <header th:replace="~{fragments :: header}"></header>
         <div class="flex flex-col my-4 items-center">
             <div
-                class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md"
+                class="flex flex-col sm:bg-white sm:shadow-md sm:rounded px-6 py-0 sm:py-8 w-full max-w-lg gap-1"
             >
-                <h1 class="font-bold text-3xl text-center mt-3 text-gray-800">
+                <h1
+                    class="font-bold text-2xl text-center text-gray-700 uppercase tracking-wide mb-2"
+                >
                     Confirmar Atendimento
                 </h1>
 
-                <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
+                <h2
+                    class="text-gray-600 font-bold text-center uppercase mt-4 mb-1"
+                >
                     Informações do Agendamento
                 </h2>
 
                 <label class="text-gray-800 font-semibold">
                     Tipo de Agendamento:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${agendamento.getTipo().getDescricao()}"
                     ></span>
                 </label>
@@ -29,7 +33,7 @@
                 <label class="text-gray-800 font-semibold">
                     Dentista:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${agendamento.getDentista().getPessoa().getNome()}"
                     ></span
                 ></label>
@@ -37,7 +41,7 @@
                 <label class="text-gray-800 font-semibold">
                     Paciente:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${agendamento.getPaciente().getPessoa().getNome()}"
                     ></span
                 ></label>
@@ -45,7 +49,7 @@
                 <label class="text-gray-800 font-semibold">
                     Data da Consulta:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}"
                     ></span
                 ></label>
@@ -53,7 +57,7 @@
                 <label class="text-gray-800 font-semibold">
                     Hora da Consulta:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}"
                     ></span
                 ></label>
@@ -61,7 +65,7 @@
                 <label class="text-gray-800 font-semibold">
                     Observações do Paciente:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${agendamento.getObservacoesPaciente()}"
                     ></span
                 ></label>
@@ -69,7 +73,7 @@
                 <label class="text-gray-800 font-semibold">
                     Forma de Pagamento:
                     <span
-                        class="font-normal text-slate-500 outline-blue-400 mb-4"
+                        class="font-normal text-slate-500 outline-blue-400 mb-3"
                         th:text="${agendamento.getFormaPagamento().getDescricao()}"
                     ></span
                 ></label>
@@ -81,18 +85,17 @@
                     enctype="utf8"
                     th:object="${agendamentoDTO}"
                 >
-                    <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
+                    <h2
+                        class="text-gray-600 font-bold text-center uppercase mt-4 mb-1"
+                    >
                         Informações Adicionais
                     </h2>
 
-                    <label
-                        class="font-medium text-gray-700 block"
-                        for="horaFim"
-                    >
+                    <label class="label" for="dataNascimento">
                         Hora do Fim da Consulta (Tempo Estimado)
                     </label>
                     <input
-                        class="input mb-4"
+                        class="input mb-3"
                         type="text"
                         th:field="*{horaFim}"
                         id="horaFim"
@@ -102,14 +105,11 @@
                         th:replace="~{fragments :: listaErros('horaFim')}"
                     ></div>
 
-                    <label
-                        class="font-medium text-gray-700 block"
-                        for="inputObservacoesDentista"
-                    >
+                    <label class="label" for="dataNascimento">
                         Observações
                     </label>
                     <textarea
-                        class="input mb-4 resize-none"
+                        class="input resize-none"
                         rows="3"
                         th:field="*{observacoesDentista}"
                         id="inputObservacoesDentista"
@@ -118,16 +118,17 @@
                     <div
                         th:replace="~{fragments :: listaErros('observacoesDentista')}"
                     ></div>
-                    <div class="mt-3 self-end">
-                        <a
-                            class="mb-4 mx-1 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                            href="/"
-                        >
-                            Cancelar
-                        </a>
-                        <button type="submit" class="mb-4 primary-btn">
-                            Confirmar Agendamento
-                        </button>
+
+                    <div
+                        class="flex flex-row self-stretch justify-evenly sm:self-end gap-2 mt-2"
+                    >
+                        <a class="secondary-btn" href="/">Cancelar</a>
+
+                        <input
+                            type="submit"
+                            class="primary-btn"
+                            value="Confirmar Agendamento"
+                        />
                     </div>
                 </form>
             </div>
