--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -5,22 +5,18 @@
     <body class="bg-sky-100">
         <header th:replace="~{fragments :: header}"></header>
 
-        <div class="flex flex-col items-center m-4">
-            <div class="w-full max-w-lg">
-                <div
-                    class="flex justify-evenly bg-white shadow-md px-6 pt-8 pb-8 rounded w-full max-w-lg gap-1"
-                >
-                    <a href="/cadastro/dentista" class="primary-btn">
-                        Cadastro de Dentista
-                    </a>
+        <div class="flex flex-col items-center sm:m-4">
+            <div
+                class="flex flex-col sm:flex-row justify-evenly items-center sm:items-start sm:bg-white sm:shadow-md sm:px-6 sm:pt-8 sm:pb-8 rounded w-full max-w-lg gap-3 sm:gap-1"
+            >
+                <a href="/cadastro/dentista" class="primary-btn">
+                    Cadastro de Dentista
+                </a>
 
-                    <a href="/listagem/usuario" class="primary-btn">
-                        Listagem de Usuários
-                    </a>
-                </div>
+                <a href="/listagem/usuario" class="primary-btn">
+                    Listagem de Usuários
+                </a>
             </div>
         </div>
-
-        <div class="bg-white mx-20 flex gap-8 items-start w-full"></div>
     </body>
 </html>
