Refatoração dos arquivos das pastas de templates, arq e controller

--- a/src/main/resources/templates/admin/listagemUsuarios.html
+++ b/src/main/resources/templates/admin/listagemUsuarios.html
@@ -33,7 +33,7 @@
                 <div
                     class="self-start sm:self-center bg-white rounded w-full relative overflow-x-auto px-1 sm:mx-0"
                 >
-                    <table th:replace="~{tabelaUsuarios :: tabela}"></table>
+                    <table th:replace="~{admin/tabelaUsuarios :: tabela}"></table>
                 </div>
 
                 <a href="/" class="link mt-2">Voltar</a>
