--- a/src/main/resources/templates/dentista/consulta.html
+++ b/src/main/resources/templates/dentista/consulta.html
@@ -94,7 +94,7 @@
                 <div
                     class="flex flex-row self-stretch justify-evenly sm:self-end gap-2 mt-2"
                 >
-                    <a class="secondary-btn" href="/">Cancelar</a>
+                    <a class="secondary-btn" href="/static">Cancelar</a>
 
                     <input
                         type="submit"
