--- a/src/main/resources/templates/agendamento/dentista.html
+++ b/src/main/resources/templates/agendamento/dentista.html
@@ -91,7 +91,7 @@
                         Informações Adicionais
                     </h2>
 
-                    <label class="label" for="dataNascimento">
+                    <label class="label" for="horaFim">
                         Hora do Fim da Consulta (Tempo Estimado)
                     </label>
                     <input
@@ -105,7 +105,7 @@
                         th:replace="~{fragments :: listaErros('horaFim')}"
                     ></div>
 
-                    <label class="label" for="dataNascimento">
+                    <label class="label" for="inputObservacoesDentista">
                         Observações
                     </label>
                     <textarea
