--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,10 +4,10 @@
 
 <body class="bg-sky-100">
 <div class="h-screen flex flex-col items-center justify-center gap-10">
+  <div class="relative p-6 max-w-md">
+    <p class="font-bold text-center text-xl">Alguma coisa deu errado! Retorne para a pagina inicial <a class="link" href="/">clicando aqui</a>.</p>
+  </div>
   <img class="max-w-md" th:src="@{/images/faviconsad.png}"/>
-    <div class="relative p-6">
-      <p class="font-bold text-xl">Alguma coisa deu errado! Retorne para a pagina inicial <a class="link" href="/">clicando aqui.</a></p>
-    </div>
 </div>
 </body>
 </html>
