--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,6 +10,7 @@
 
         <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.png}" />
         <link th:href="@{/css/tailwind.css}" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.min.js"></script>
     </head>
 
     <header
