--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,8 @@
     </head>
 
     <body class="sm:p-0 bg-sky-100">
+        <div th:replace="~{fragments :: toasts}"></div>
+
         <div class="h-screen flex flex-col items-center justify-center gap-10">
             <img
                 class="max-w-xs sm:max-w-md"
