--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+#toasts {
+    @apply fixed right-2 bottom-2 m-2 bg-white rounded shadow-md px-5 py-3 text-slate-600 text-center;
+}
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 2s, opacity 2s linear;
+}
+
 .input {
     @apply py-2 px-3 rounded-md shadow focus:shadow-md font-medium outline-1 focus:outline bg-slate-50 text-slate-700 outline-blue-500;
 }
