--- a/src/main/resources/templates/paciente/index.html
+++ b/src/main/resources/templates/paciente/index.html
@@ -3,6 +3,8 @@
     <head th:replace="~{fragments :: mainHeader('Dashboard')}"></head>
 
     <body class="bg-sky-100">
+        <div th:replace="~{fragments :: toasts}"></div>
+
         <header th:replace="~{fragments :: header}"></header>
 
         <div class="flex flex-col items-center m-4">
