Biblioteca de calendário e correção de bugs na tela de relatório financeiro

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -18,6 +18,11 @@
                 <a href="/listagem/usuario" class="primary-btn">
                     Listagem de Usuários
                 </a>
+
+                <a href="../relatorioFinanceiro" class="primary-btn">
+                    Relatório Financeiro
+                </a>
+
             </div>
         </div>
     </body>
