--- a/src/main/resources/templates/dentista/consulta.html
+++ b/src/main/resources/templates/dentista/consulta.html
@@ -94,12 +94,12 @@
                 <div
                     class="flex flex-row self-stretch justify-evenly sm:self-end gap-2 mt-2"
                 >
-                    <a class="secondary-btn" href="/static">Cancelar</a>
+                    <a class="secondary-btn" href="/">Cancelar</a>
 
                     <input
                         type="submit"
                         class="primary-btn"
-                        value="Confirmar Agendamento"
+                        value="Finalizar Consulta"
                     />
                 </div>
             </form>
