--- a/src/main/resources/templates/dentista/index.html
+++ b/src/main/resources/templates/dentista/index.html
@@ -4,12 +4,7 @@
         <th:block
             th:replace="~{fragments :: mainHeader('Dashboard')}"
         ></th:block>
-
-        <link
-            href="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.css"
-            rel="stylesheet"
-        />
-        <script src="https://cdn.jsdelivr.net/npm/@event-calendar/build@2.3.3/event-calendar.min.js"></script>
+        <link th:href="@{/css/calendario.css}" rel="stylesheet">
         <script
             defer
             src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
@@ -27,9 +22,9 @@
 
         <header th:replace="~{fragments :: header}"></header>
 
-        <div class="flex items-start justify-evenly">
+        <div class="sm:flex items-start justify-evenly">
             <div
-                class="border rounded max-w-xl w-full flex flex-col px-8 pb-10 pt-3 bg-white shadow-md"
+                class="border rounded max-w-xl w-full py-2 mb-5 flex flex-col px-8 pb-10 pt-3 bg-white shadow-md"
             >
                 <h1
                     class="font-bold text-xl text-center mt-3 mb-6 text-gray-700"
@@ -102,18 +97,25 @@
                 </table>
             </div>
             <div
-                class="border rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-3 bg-white shadow-md"
+                class="border py-2 rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-3 bg-white shadow-md"
             >
                 <h1 class="font-bold text-xl text-center mt-3 text-gray-700">
                     Consultas
                 </h1>
-                <div id="calendario-agendamentos"></div>
+                <div id="calendario"></div>
+            </div>
+        </div>
+
+        <div id="modalAux" class="modal">
+            <div class="conteudoModal">
+                <span class="close" onclick="fecharModal()">&times;</span>
+                <div id="conteudoModal"></div>
             </div>
         </div>
 
         <div
-            class="fixed inset-0 w-full h-full flex flex-col items-center justify-center"
-            x-show="modalVisivel"
+            class="fixed inset-0 w-full h-full flex flex-col items-center modal justify-center"
+            id="modal" x-show="modalVisivel"
         >
             <div
                 @click="modalVisivel=false"
@@ -124,72 +126,13 @@
         </div>
     </body>
 
+    <script th:src="@{/scripts/calendario.js}"></script>
     <script th:inline="javascript">
-        let ec = new EventCalendar(
-            document.getElementById("calendario-agendamentos"),
-            {
-                locale: "pt-BR",
-                view: "timeGridWeek",
-                headerToolbar: {
-                    start: "",
-                    center: "title",
-                    end: "",
-                },
-                buttonText: {
-                    close: "Close",
-                    dayGridMonth: "mês",
-                    listDay: "list",
-                    listMonth: "list",
-                    listWeek: "list",
-                    listYear: "list",
-                    resourceTimeGridDay: "day",
-                    resourceTimeGridWeek: "week",
-                    timeGridDay: "day",
-                    timeGridWeek: "week",
-                    today: "hoje",
-                },
-                allDaySlot: false,
-                scrollTime: "09:00:00",
-                slotDuration: "01:00",
-                events: createEvents(),
-                dayMaxEvents: true,
-                nowIndicator: true,
-                selectable: false,
-                editable: false,
-            }
-        );
-
-        function createEvents() {
-            let days = [];
-            for (let i = 0; i < 7; ++i) {
-                let day = new Date();
-                let diff = i - day.getDay();
-                day.setDate(day.getDate() + diff);
-                days[i] =
-                    day.getFullYear() +
-                    "-" +
-                    _pad(day.getMonth() + 1) +
-                    "-" +
-                    _pad(day.getDate());
-            }
-
-            var cons = JSON.parse(/*[[${consultas}]]*/);
-            var consultas = [];
-            for (let i = 0; i < cons.length; i++) {
-                let con = cons[i];
-                consultas[i] = {
-                    start: days[con.day] + " " + con.start,
-                    end: days[con.day] + " " + con.end,
-                    title: con.title,
-                    color: con.color,
-                };
-            }
-            return consultas;
-        }
-
-        function _pad(num) {
-            let norm = Math.floor(Math.abs(num));
-            return (norm < 10 ? "0" : "") + norm;
+        const consultas = JSON.parse(/*[[${consultas}]]*/);
+        console.log(consultas)
+        Calendario.init(consultas);
+        function fecharModal() {
+            this.modal.style.display = 'none';
         }
     </script>
 </html>
