adição do sistema de toast nas paginas que faltavam e adição dosistema de email para aviso de agendamento

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
 <body class="bg-sky-100">
 <div class="h-screen flex flex-col items-center justify-center gap-10">
   <div class="relative p-6 max-w-md">
-    <p class="font-bold text-center text-xl">Alguma coisa deu errado! Retorne para a pagina inicial <a class="link" href="/">clicando aqui</a>.</p>
+    <p class="font-bold text-center text-xl">Alguma coisa deu errado! Retorne para a página inicial <a class="link" href="/">clicando aqui</a>.</p>
   </div>
   <img class="max-w-md" th:src="@{/images/faviconsad.png}"/>
 </div>
