correção de bug do calendário

--- a/src/main/resources/templates/dentista/index.html
+++ b/src/main/resources/templates/dentista/index.html
@@ -22,6 +22,9 @@
 
         <header th:replace="~{fragments :: header}"></header>
 
+
+        <div th:text="${consultas}"></div>
+
         <div class="sm:flex items-start justify-evenly">
             <div
                 class="border rounded max-w-xl w-full py-2 mb-5 flex flex-col px-8 pb-10 pt-3 bg-white shadow-md"
