fix bug nos dias da semana do calendário

--- a/src/main/resources/static/css/calendario.css
+++ b/src/main/resources/static/css/calendario.css
@@ -27,6 +27,12 @@
     background-color: #f0f0f0;
 }
 
+.empty{
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+}
+
 .expanded {
     background-color: #d3d3d3;
 }
