Relatorio financeiro concluído

--- a/src/main/resources/templates/dentista/consulta.html
+++ b/src/main/resources/templates/dentista/consulta.html
@@ -80,6 +80,18 @@
                 </label>
 
                 <label class="label font-semibold mt-2" for="inputDescricao">
+                    Valor do procedimento:
+                </label>
+                <textarea
+                    class="input resize-none"
+                    rows="1"
+                    id="inputValorProcedimento"
+                    name="valorProcedimento"
+                    th:field="*{valorProcedimento}"
+                    type="textarea"
+                ></textarea>
+
+                <label class="label font-semibold mt-2" for="inputDescricao">
                     Descrição
                 </label>
                 <textarea
