--- a/src/main/resources/templates/relatorioFinanceiro.html
+++ b/src/main/resources/templates/relatorioFinanceiro.html
@@ -9,13 +9,21 @@
     <div class="flex flex-col items-center m-4">
         <div class="border rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-13 bg-white shadow-md">
             <h1 class="font-bold text-xl text-center mt-3 text-gray-700">
-                Relatório Financeiro
+                Relatório Financeiro - Atendimentos
             </h1>
             <canvas id="myChart"></canvas>
+        </div>
+
+        <div class="border rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-13 bg-white shadow-md">
+            <h1 class="font-bold text-xl text-center mt-3 text-gray-700">
+                Relatório Financeiro - Rendimentos
+            </h1>
+            <canvas id="myChart2"></canvas>
         </div>
     </div>
     <script th:inline="javascript">
         var ctx = document.getElementById("myChart").getContext("2d");
+        var ctx2 = document.getElementById("myChart2").getContext("2d");
 
         var mesesValores = /*[[${mesesValores}]]*/ 'default';
 
@@ -39,6 +47,29 @@
                         label: "Consulta",
                         data: Object.values(mesesValores).map(array => array[2]),
                         backgroundColor: "rgba(100, 100, 255, 1)",
+                    },
+                ],
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+
+        var myChart2 = new Chart(ctx2, {
+            type: "line",
+            data: {
+                labels: labels,
+                datasets: [
+                    {
+                        label: "Rendimentos",
+                        data: Object.values(mesesValores).map(array => array[3]),
+                        backgroundColor: "rgba(255,255, 0, 0.3)",
                     },
                 ],
             },
