Adição do Histórico de paciente

--- a/src/main/resources/templates/dentista/consulta.html
+++ b/src/main/resources/templates/dentista/consulta.html
@@ -22,7 +22,9 @@
                 >
                     Informações do Agendamento
                 </h2>
-
+                <div class="flex text-end">
+                    <a class="secondary-btn" th:href="'/consulta/historico/' + ${agendamento.getPaciente().getPessoa().getCpf()}">Histórico</a>
+                </div>
                 <label class="label font-semibold">
                     Tipo de Agendamento:
                     <span
