Adição de download da planilha de dados

--- a/src/main/resources/templates/relatorioFinanceiro.html
+++ b/src/main/resources/templates/relatorioFinanceiro.html
@@ -7,6 +7,8 @@
     <header th:replace="~{fragments :: header}"></header>
 
     <div class="flex flex-col items-center m-4">
+        <a class="link mb-4" href="/relatorio-financeiro/excel" target="_blank">Exportar para Excel</a>
+
         <div class="border rounded max-w-5xl w-full flex flex-col px-8 pb-10 pt-13 bg-white shadow-md">
             <h1 class="font-bold text-xl text-center mt-3 text-gray-700">
                 Relatório Financeiro - Atendimentos
